--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,25 +26,25 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cloud_firestore: ^2.2.0
+  cloud_firestore: ^4.3.0
   cupertino_icons: ^1.0.0
-  firebase_analytics: ^8.1.0
-  firebase_auth: ^1.2.0
-  firebase_core: ^1.2.0
-  firebase_dynamic_links: ^2.0.4
-  fluttertoast: ^7.1.5
+  firebase_analytics: ^10.0.8
+  firebase_auth: ^4.2.1
+  firebase_core: ^2.4.0
+  firebase_dynamic_links: ^5.0.10
+  fluttertoast: ^8.1.2
   http: ^0.13.3
   intl: ^0.17.0
-  package_info: 0.4.3+2
-  qr_code_scanner: ^0.0.13
-  qr_flutter: ^3.2.0
-  share: ^0.6.5+4
+  package_info: ^2.0.2
+  qr_code_scanner: ^1.0.1
+  qr_flutter: ^4.0.0
+  share: ^2.0.4
   url_launcher: ^6.0.5
-  window_location_href: ^0.0.2
+  window_location_href: ^1.0.1+2
   vibration: ^1.7.3
-  syncfusion_flutter_charts: ^19.1.55+1
+  syncfusion_flutter_charts: ^20.4.38
   file: ^6.1.0
-  rxdart: ^0.26.0
+  rxdart: ^0.27.7
   universal_html: ^2.0.8
 
 dev_dependencies:
